@@ -9,7 +9,7 @@
   <para>The GNOMEs who bring you this software are too numerous to mention by
   name, but in addition to the folks mentioned above, a few contributors deserve
   special thanks for exceptional contributions toward making this release
-  possible:</para>
+  possible: TODO: Update this for 2.8, if we have time.</para>
 
   <itemizedlist>
     <listitem>
